--- a/main.html
+++ b/main.html
@@ -2,7 +2,13 @@
 <html>
   <body>
     <script type="text/javascript" src="./script.js">
-</script>
+	</script>
+	  <form method="post" id="myDoc">
+		  <input id="name" type="text" name="name">
+		  <input id="year" type="number" name="year">
+		  <button id="button">submit</button>
+		  <h3 id="url">https://localhost:8080/</h3>
+	  </form>
   </body>
 
 </html>
