--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
     <script type="text/javascript" src="./script.js">
 	</script>
 	  <form method="post" id="myDoc">
-		  <input id="name" type="text" name="name"> <br>
-		  <input id="year" type="number" name="year"> <br>
+		  <input id="name" type="text" name="name">
+		  <input id="year" type="number" name="year">
 		  <button id="button">submit</button>
 		  <h3 id="url">https://localhost:8080/</h3>
 	  </form>
